Updated to link

--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 <body>
    Look: <span class="uifunk"></span>.
 </body>
-<script src="fixiejs-fork.js"></script>
+<script src="uifunk.js"></script>
 </html>
